--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3390,6 +3390,41 @@ body.is-preload #banner > .inner {
   }
 }
 
+.videos {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+  max-width: 95%;
+}
+
+@media screen and (min-width: 1281px) {
+  .videos {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    gap: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 981px) and (max-width: 1280px) {
+  .videos {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+  }
+}
+
+.videos .video {
+  border-radius: 1rem;
+  width: 100%;
+  height: 10rem;
+}
+
 /* Footer */
 #footer .copyright {
   font-size: 0.8em;
